# Library-Management-System

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/app/: app.cpp  app.h  borrow_book.cpp  borrow_book.h  change_password.h  edit_books.cpp  edit_books.h  home.h  login.cpp  login.h  logout.h  manage_users.cpp  manage_users.h  payment.cpp  payment.h  return_book.cpp  return_book.h  search_books.cpp  search_books.h  welcome.h
src/objects/: account.h  book.h  users.h
src/services/: accounts.cpp  accounts.h  base.h  books.cpp  books.h  users.cpp  users.h
src/utils/: ssv_handler.h  terminal_colours.h
